force-app/main/default/objects/Tax_Exempt_Form_Config__mdt/Tax_Exempt_Form_Config__mdt.object-meta.xml
<CustomObject>
    <label>Tax Exempt Form Config</label>
    <pluralLabel>Tax Exempt Form Configs</pluralLabel>
</CustomObject>