force-app/main/default/objects/Tax_Exempt_Form_Config__mdt/fields/Authorized_Signer_Title__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signer_Title__c</fullName>
    <label>Authorized Signer Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>