force-app/main/default/objects/Tax_Exempt_Form_Config__mdt/fields/Certificate_of_Authority__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Authority__c</fullName>
    <label>Certificate of Authority</label>
    <length>20</length>
    <type>Text</type>
</CustomField>