force-app/main/default/objects/Tax_Exempt_Form_Config__mdt/fields/Form_Version_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_Version_Date__c</fullName>
    <label>Form Version Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>