force-app/main/default/objects/Tax_Exempt_Form_Config__mdt/fields/MJI_City__c.field-meta.xml
<CustomField>
    <fullName>MJI_City__c</fullName>
    <label>MJI City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>