force-app/main/default/objects/Tax_Exempt_Form_Config__mdt/fields/MJI_State__c.field-meta.xml
<CustomField>
    <fullName>MJI_State__c</fullName>
    <label>MJI State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>