force-app/main/default/objects/Tax_Exempt_Form_Config__mdt/fields/MJI_Street__c.field-meta.xml
<CustomField>
    <fullName>MJI_Street__c</fullName>
    <label>MJI Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>