force-app/main/default/objects/Tax_Exempt_Form_Config__mdt/fields/MJI_Zip__c.field-meta.xml
<CustomField>
    <fullName>MJI_Zip__c</fullName>
    <label>MJI Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>